# datastar_playground

./: readme.md
continuous_sse_go/: go.mod  home.html  main.go  readme.md
counter_datastar_go/: .gitignore  Makefile  go.mod  go.sum  main.go
counter_datastar_go/handlers/: common.go  handlers.go
counter_datastar_go/internal/components/: comps.templ  comps_templ.go  counter.templ  header.templ  home.templ  layout.templ
counter_datastar_go_templ/: .air.toml  .gitignore  go.mod  go.sum  main.go  readme.md  run.sh
counter_datastar_go_templ/comps/: comps.templ  comps_templ.go
datastar_reload_go/: .air.toml  .gitignore  go.mod  home.html  main.go  readme.md
hello_datastar/: go.mod  main.go
hello_datastar_go/: go.mod  go.sum  hello-world.html  main.go  readme.md
hello_datastar_rust/: Cargo.toml  readme.md
