cargo-features = ["edition2024"]

[package]
name = "hello_datastar_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
datastar = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
